src/test/deca/context/invalid/void-return.deca
// Description:
//    Return dans une fonction qui ne doit rien retourner 
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13: Return cannot be used when method has void type (rule 3.24)
//
// Historique:
//    cree le 16/01/2023

class A{
    void getX() {
        return 0;
    }
}